--- a/.github/workflows/ci-serenity.yml
+++ b/.github/workflows/ci-serenity.yml
@@ -32,10 +32,7 @@ jobs:
       run: mvn clean install -DskipTests
 
     - name: 🔥Ejecutar pruebas con Gatling
-      run: |
-          mvn gatling:test 
-      env:
-          GATLING_SIMULATIONS_FOLDER: src/test/scala
+      run:  mvn gatling:test -Dgatling  
 
     - name: 📂 Guardar reportes de Gatling
       uses: actions/upload-artifact@v4
