--- a/.github/workflows/ci-serenity.yml
+++ b/.github/workflows/ci-serenity.yml
@@ -32,7 +32,7 @@ jobs:
       run: mvn clean install -DskipTests
 
     - name: 🔥Ejecutar pruebas con Gatling
-      run:  mvn gatling:test
+      run:   mvn gatling:test "-Dgatling.simulationClass=apiFakestore.GetSimulation"
 
     - name: 📂 Guardar reportes de Gatling
       uses: actions/upload-artifact@v4
