--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.bancodebogota</groupId>
+    <groupId>org.example</groupId>
     <artifactId>apis-load-testing</artifactId>
     <version>1.0.0</version>
 
@@ -11,7 +11,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <gatling.version>3.11.5</gatling.version>
+        <gatling.version>3.13.5</gatling.version>
         <gatling-maven-plugin.version>4.9.5</gatling-maven-plugin.version>
         <maven-jar-plugin.version>3.4.0</maven-jar-plugin.version>
         <scala-maven-plugin.version>4.9.2</scala-maven-plugin.version>
