--- a/.github/workflows/ci-serenity.yml
+++ b/.github/workflows/ci-serenity.yml
@@ -28,6 +28,9 @@ jobs:
         distribution: 'temurin'
         cache: maven  
         
+    - name: Check Maven Version
+      run: mvn -version  
+      
     - name: Instalar dependencias y compilar
       run: mvn clean install -DskipTests
 
