--- a/pom.xml
+++ b/pom.xml
@@ -100,7 +100,11 @@
                     </execution>
                 </executions>
             </plugin>
-
+            <plugin>
+                <groupId>io.gatling</groupId>
+                <artifactId>gatling-maven-plugin</artifactId>
+                <version>${gatling-maven-plugin.version}</version>
+            </plugin>
         </plugins>
     </build>
 </project>
