--- a/pom.xml
+++ b/pom.xml
@@ -5,25 +5,25 @@
 
     <groupId>org.example</groupId>
     <artifactId>apis-load-testing</artifactId>
-    <version>1.0.0</version>
+    <version>1.0-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <gatling.version>3.13.5</gatling.version>
-        <gatling-maven-plugin.version>4.16.1</gatling-maven-plugin.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <gatling.version>3.11.5</gatling.version>
+        <gatling-maven-plugin.version>4.9.5</gatling-maven-plugin.version>
         <maven-jar-plugin.version>3.4.0</maven-jar-plugin.version>
         <scala-maven-plugin.version>4.9.2</scala-maven-plugin.version>
     </properties>
-
     <dependencies>
         <dependency>
             <groupId>io.gatling.highcharts</groupId>
             <artifactId>gatling-charts-highcharts</artifactId>
             <version>${gatling.version}</version>
+            <scope>test</scope>
         </dependency>
-
         <!-- https://mvnrepository.com/artifact/io.github.cdimascio/java-dotenv -->
         <dependency>
             <groupId>io.github.cdimascio</groupId>
@@ -35,6 +35,12 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-jar-plugin</artifactId>
             <version>${maven-jar-plugin.version}</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-core -->
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-core</artifactId>
+            <version>1.12.364</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.json4s/json4s-jackson -->
         <dependency>
@@ -63,7 +69,9 @@
     </dependencies>
 
     <build>
+        <testSourceDirectory>src/test/scala</testSourceDirectory>
         <plugins>
+
             <plugin>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>${maven-jar-plugin.version}</version>
