--- a/.github/workflows/ci-serenity.yml
+++ b/.github/workflows/ci-serenity.yml
@@ -30,11 +30,6 @@ jobs:
         
     - name: Cache Maven dependencies
       uses: actions/cache@v4
-      with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
         
     - name: Check Maven Version
       run: mvn -version 
@@ -43,7 +38,7 @@ jobs:
       run: mvn clean install -DskipTests
 
     - name: 🔥Ejecutar pruebas con Gatling
-      run:   mvn gatling:test "-Dgatling.simulationClass=apiFakestore.GetSimulation" 
+      run:   mvn gatling:test "-Dgatling.runMultipleSimulations=true"
       continue-on-error: true
 
     - name: 📂 Guardar reportes de Gatling
