--- a/.github/workflows/ci-serenity.yml
+++ b/.github/workflows/ci-serenity.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Check Maven Version
       run: mvn -version 
       
-    - name: Instalar dependencias y compilar
+    - name: 🔍Instalar dependencias y compilar
       run: mvn clean install -DskipTests
 
     - name: 🔥Ejecutar pruebas con Gatling
